--- a/.env
+++ b/.env
@@ -8,6 +8,14 @@ JWT_EXPIRE=7d
 # Static OTP for development (fallback when SMS API fails) - 4 digits
 STATIC_OTP=1006
 
+# Email Configuration (for Nodemailer)
+# NOTE: For Gmail, use App Password (not regular password)
+# Generate App Password: https://myaccount.google.com/apppasswords
+# Format: 16 characters without spaces (e.g., abcdwxyzpqrsmnop)
+EMAIL_SERVICE=gmail
+EMAIL_USER=campaignwalatech@gmail.com
+EMAIL_PASSWORD=qeuw nnzu ybzp fxyu
+
 # SMS API Configuration (Optional - for third-party SMS service)
 SMS_API_KEY=your_sms_api_key_here
 SMS_API_URL=https://api.sms-provider.com/send
